ZYNQ/ARM/EMIO_LED/EMIO_LED.sdk/.metadata/.plugins/org.eclipse.cdt.ui/gpio_emio.build.log
22:43:06 **** Auto Build of configuration Debug for project gpio_emio ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../gpio_emio_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'Init_Interrupt_System':
../src/main.c:131:26: error: 'IntrHandler' undeclared (first use in this function); did you mean 'IntrHandle'?
    (Xil_ExceptionHandler)IntrHandler, (void*)Gpio);
                          ^~~~~~~~~~~
                          IntrHandle
../src/main.c:131:26: note: each undeclared identifier is reported only once for each function it appears in
../src/main.c: At top level:
../src/main.c:145:46: error: unknown type name 'Status'; did you mean 'XStatus'?
 void IntrHandle(void* CallBackRef, u32 Bank, Status){
                                              ^~~~~~
                                              XStatus
make: *** [src/subdir.mk:23: src/main.o] Error 1

22:43:06 Build Finished (took 577ms)

